--- a/cfg/prd/requirements.txt
+++ b/cfg/prd/requirements.txt
@@ -9,4 +9,6 @@ opencv-python>=4.8.0
 pytesseract>=0.3.10
 Pillow>=10.0.0
 python-dateutil>=2.8.0
-reportlab>=4.0.0 
+reportlab>=4.0.0
+flask>=2.3.0
+werkzeug>=2.3.0 
