Added custom react frontend

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,18 @@ logs/
 # data/
 # *.beancount
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# React build
+frontend/build/
+frontend/dist/
+
 # OS
 .DS_Store
 Thumbs.db 
