--- a/cfg/prd/requirements.txt
+++ b/cfg/prd/requirements.txt
@@ -1,5 +1,4 @@
 beancount>=2.3.5
-fava>=1.25
 pandas>=2.0.0
 python-dotenv>=1.0.0
 imapclient>=3.0.0
@@ -11,4 +10,5 @@ Pillow>=10.0.0
 python-dateutil>=2.8.0
 reportlab>=4.0.0
 flask>=2.3.0
-werkzeug>=2.3.0 
+werkzeug>=2.3.0
+flask-cors>=4.0.0 
