--- a/cfg/prd/requirements.txt
+++ b/cfg/prd/requirements.txt
@@ -1,14 +1,8 @@
-beancount>=2.3.5
-pandas>=2.0.0
-python-dotenv>=1.0.0
-imapclient>=3.0.0
-PyPDF2>=3.0.0
-pdfplumber>=0.9.0
-opencv-python>=4.8.0
-pytesseract>=0.3.10
-Pillow>=10.0.0
-python-dateutil>=2.8.0
-reportlab>=4.0.0
-flask>=2.3.0
-werkzeug>=2.3.0
-flask-cors>=4.0.0 
+flask==2.3.3
+flask-cors==4.0.0
+flask-limiter==3.5.0
+imapclient==3.0.1
+pdfplumber==0.10.3
+beancount==2.3.5
+fava==1.25
+python-dotenv==1.0.0 
